# GLFW-Guide

./: .gitignore  CMakeLists.txt  README.md
Dependencies/glad/src/: glad.c
GLFW Guide/: GLFW_Guide.entitlements  Main.cpp  OpenGL_On_Mac.cpp  triangle-opengl.c  triangle-opengl.glsl
GLFW Guide.xcodeproj/: project.pbxproj
